Remove play project